@@ -45,7 +45,7 @@ public class DynamicController {
         try {
             Method method = requestMappingHandlerMapping.getClass().getSuperclass().getSuperclass().getDeclaredMethod("detectHandlerMethods", Object.class);
             method.setAccessible(true);
-            method.invoke(requestMappingHandlerMapping, type.newInstance());
+            method.invoke(requestMappingHandlerMapping, type.getConstructor().newInstance());
         } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException | InstantiationException e) {
             throw new LoaderRuntimeException(e.getMessage(), e);
         }
